--- a/bin/index.html
+++ b/bin/index.html
@@ -13,14 +13,39 @@
             stroke-width: 2;
         }
         .fig{
-            font-family: 'Times New Roman', Times, serif;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            color: black;
+            text-align: center;
         }
     </style>
 </head>
-<body>
+<header>
     <h1 class="fig">Pruebas de figuras</h1>
-    
-    <svg id="miSVG2" width="500" height="200"></svg>
+    <button id="addButton">Agregar Círculo</button>
+</header>
+<body>
+    <div class="main-content">
+        <!-- Contenido principal de la página -->
+        <h1>Contenido Principal</h1>
+      </div>
+    </div>
+    <div class="container">
+        <div class="sidebar">
+          <div class="toggle-btn" id="toggleBtn">&#9664;</div>
+          <!-- Contenido de la barra lateral -->
+          <ul>
+            <li>EMPRESA</li>
+            <li>USUARIOS</li>
+            <li>DRAG</li>
+            <!-- Agrega más elementos según sea necesario -->
+          </ul>
+        </div>
+        
+
+
+   <br>
+   <br>
+    <svg id="miSVG2" width="1200" height="720"></svg>
 
 
 
