--- a/bin/index.html
+++ b/bin/index.html
@@ -6,7 +6,7 @@
     <title>Ventana con D3 y TypeScript</title>
     <title>Dibujar Círculo con D3 y TypeScript</title>
     <style>
-        /* Estilos CSS para la ventana */
+        /* Estilos CSS para la ventana
         .ventana {
             fill: rgb(77, 77, 77);
             stroke: rgb(71, 71, 71);
@@ -16,7 +16,7 @@
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             color: black;
             text-align: center;
-        }
+        } */
     </style>
 </head>
 <header>
@@ -34,9 +34,9 @@
           <div class="toggle-btn" id="toggleBtn">&#9664;</div>
           <!-- Contenido de la barra lateral -->
           <ul>
-            <li>EMPRESA</li>
-            <li>USUARIOS</li>
-            <li>DRAG</li>
+            <li></li>
+            <li></li>
+            <li></li>
             <!-- Agrega más elementos según sea necesario -->
           </ul>
         </div>
