--- a/bin/index.html
+++ b/bin/index.html
@@ -3,63 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ventana con D3 y TypeScript</title>
-    <title>Dibujar Círculo con D3 y TypeScript</title>
-    <style>
-        /* Estilos CSS para la ventana
-        .ventana {
-            fill: rgb(77, 77, 77);
-            stroke: rgb(71, 71, 71);
-            stroke-width: 2;
-        }
-        .fig{
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            color: black;
-            text-align: center;
-        } */
-    </style>
 </head>
 <header>
-    <h1 class="fig">Pruebas de figuras</h1>
-    <button id="addButton">Agregar Círculo</button>
 </header>
 <body>
-    <div class="main-content">
-        <!-- Contenido principal de la página -->
-        <h1>Contenido Principal</h1>
-      </div>
-    </div>
-    <div class="container">
-        <div class="sidebar">
-          <div class="toggle-btn" id="toggleBtn">&#9664;</div>
-          <!-- Contenido de la barra lateral -->
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <!-- Agrega más elementos según sea necesario -->
-          </ul>
-        </div>
-        
-
-
    <br>
    <br>
-    <svg id="miSVG2" width="1200" height="720"></svg>
-
-
-    <svg width="800" height="800">
+    <svg id="miSVG2" width="1200" height="1220"></svg>
+    <svg id="miSVG3" width="0" height="0"></svg>
+    <!-- <svg width="800" height="800">
         <rect x="50" y="80" width="200" height="200" fill="gray" stroke="#000000" stroke-width="2"/>
-
         <circle cx="150" cy="180" r="50" fill="yellow" stroke="#000000" stroke-width="2"/>
-      </svg>
-
-
-
+      </svg> -->
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
-    <script src="dist/bundle.js" defer></script>
-
+    <script src="styles/estilos.css"></script>
 </body>
 </html>
  
