--- a/bin/index.html
+++ b/bin/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 <header>
 </header>
 <body>
-   <br>
-   <br>
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/figuras.js"></script>
+    
 </body>
 </html>
  
