--- a/bin/index.html
+++ b/bin/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
-    <script src="js//vistas/figuras.js"></script>
+    <script src="js/vistas/figuras.js"></script>
     
 </body>
 </html>
