--- a/bin/index.html
+++ b/bin/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <header>
 </header>
+
 <body>
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/vistas/figuras.js"></script>
-    
+    <script src="js/figuras.js"></script>
+
 </body>
+
 </html>
- 
