--- a/bin/index.html
+++ b/bin/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/estilos.css">
 </head>
 <header>
 </header>
@@ -12,7 +13,6 @@
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
     <script src="js/figuras.js"></script>
-
 </body>
 
 </html>
