--- a/bin/index.html
+++ b/bin/index.html
@@ -13,6 +13,7 @@
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
     <script src="js/figuras.js"></script>
+    <script src="js/usuarios.js"></script>
 </body>
 
 </html>
