--- a/bin/index.html
+++ b/bin/index.html
@@ -12,8 +12,8 @@
 <body>
     <script src="lib/d3.v7.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/figuras.js"></script>
-    <script src="js/usuarios.js"></script>
+    <script src="js/vistas/drag-and-drop.js"></script>
+    <script src="js/vistas/usuarios.js"></script>
 </body>
 
 </html>
