--- a/bin/index.html
+++ b/bin/index.html
@@ -14,6 +14,8 @@
     <script src="js/app.js"></script>
     <script src="js/vistas/drag-and-drop.js"></script>
     <script src="js/vistas/usuarios.js"></script>
+    <script src="js/vistas/empresas.js"></script>
 </body>
+
 
 </html>
